# edu-advent-2021

./: .gitignore  README.md  a01.hs  a02.hs  a03.hs  advent.cabal  c01.cpp  c02.cpp  c03.cpp  crun  ctest  default.nix  h01.hs  h02.hs  h03.hs  h04.hs  h05.hs  h06.hs  h07.hs  h08.hs  h09.hs  h10.hs  h11.hs  h12.hs  h13.hs  h14.hs  h15.hs  h16.hs  h17.hs  h18.hs  h19.hs  h20.hs  h21.hs  h22.hs  hrun  htest
