cabal-version: 3.0
version: 1.0.0.0
name: advent
-- vim: foldmethod=marker

common ghc2021 -- {{{
  -- https://www.reddit.com/r/haskell/comments/kzxsve/ghc_2021/
  -- https://github.com/ghc-proposals/ghc-proposals/blob/master/proposals/0380-ghc2021.rst
  default-extensions:
    -- Syntax:
    BangPatterns
    EmptyCase
    ImportQualifiedPost
    NamedFieldPuns
    PostfixOperators
    TupleSections
    -- Literals:
    BinaryLiterals
    HexFloatLiterals
    NumericUnderscores
    -- Types:
    ConstraintKinds
    ExistentialQuantification
    GADTSyntax
    PolyKinds
    RankNTypes
    StandaloneKindSignatures
    TypeApplications
    TypeOperators
    -- Type signatures:
    ExplicitForAll
    KindSignatures
    NamedWildCards
    ScopedTypeVariables
    -- Class and instances declarations:
    ConstrainedClassMethods
    FlexibleContexts
    FlexibleInstances
    InstanceSigs
    MultiParamTypeClasses
    TypeSynonymInstances
    -- Deriving mechanism:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyDataDeriving
    GeneralisedNewtypeDeriving
    StandaloneDeriving
  -- }}}

common shared -- {{{
  import: ghc2021
  default-language: Haskell2010
  build-depends: base, base-prelude
  mixins: base hiding (Prelude), base-prelude (BasePrelude as Prelude)
  default-extensions:
    BlockArguments
    DataKinds
    DerivingVia
    ImplicitParams
    LambdaCase
    MonadComprehensions
    MultiWayIf
    RecordWildCards
    TransformListComp
    TypeFamilies
    ViewPatterns
  -- }}}

executable h01
  import: shared
  main-is: h01.hs
  ghc-options: -main-is H01

executable h02
  import: shared
  main-is: h02.hs
  ghc-options: -main-is H02
  build-depends:
   , lens
   , mtl

executable h03
  import: shared
  main-is: h03.hs
  ghc-options: -main-is H03
  build-depends:
   , containers

executable h04
  import: shared
  main-is: h04.hs
  ghc-options: -main-is H04
  build-depends:
   , containers
   , monoidal-containers
   , split
   , tagged

executable h05
  import: shared
  main-is: h05.hs
  ghc-options: -main-is H05
  build-depends:
   , containers
   , linear

executable h06
  import: shared
  main-is: h06.hs
  ghc-options: -main-is H06
  build-depends:
   , array
   , containers

executable h07
  import: shared
  main-is: h07.hs
  ghc-options: -main-is H07
  build-depends:
   , containers

executable h08
  import: shared
  main-is: h08.hs
  ghc-options: -main-is H08
  build-depends:
   , containers

executable h09
  import: shared
  main-is: h09.hs
  ghc-options: -main-is H09
  build-depends:
   , array
   , containers
   , linear

executable h10
  import: shared
  main-is: h10.hs
  ghc-options: -main-is H10
  build-depends:

executable h11
  import: shared
  main-is: h11.hs
  ghc-options: -main-is H11
  build-depends:
   , containers
   , linear
   , monad-extras

executable h12
  import: shared
  main-is: h12.hs
  ghc-options: -main-is H12
  build-depends:
   , containers
   , text

executable h13
  import: shared
  main-is: h13.hs
  ghc-options: -main-is H13
  build-depends:
   , containers
   , linear
   , split

executable h14
  import: shared
  main-is: h14.hs
  ghc-options: -main-is H14
  build-depends:
   , containers
   , monoidal-containers
   , mtl

executable h15
  import: shared
  main-is: h15.hs
  ghc-options: -main-is H15
  -- ghc-options: -main-is H15 -rtsopts -fforce-recomp
  -- ghc-options: -main-is H15 -rtsopts -fforce-recomp -prof -fprof-auto
  build-depends:
   , array
   , containers
   , linear
   , mtl
   , pqueue

executable h16
  import: shared
  main-is: h16.hs
  ghc-options: -main-is H16
  build-depends:
   , split

executable h17
  import: shared
  main-is: h17.hs
  ghc-options: -main-is H17
  build-depends:
   , linear

executable h18
  import: shared
  main-is: h18.hs
  ghc-options: -main-is H18
  build-depends:

executable h19
  import: shared
  main-is: h19.hs
  ghc-options: -main-is H19
  build-depends:
   , array
   , containers
   , linear
   , split

executable h20
  import: shared
  main-is: h20.hs
  ghc-options: -main-is H20
  build-depends:
   , array
   , containers
   , linear
